@@ -195,6 +195,9 @@
 			<trans-unit id="disabled_autosync" xml:space="preserve">
 				<source>A Scheduler task exists but has been disabled. Only an administrator can enable it again.</source>
 			</trans-unit>
+			<trans-unit id="autosync_for_group" xml:space="preserve">
+				<source>Automated group imports cannot be edited here.</source>
+			</trans-unit>
 			<trans-unit id="next_autosync" xml:space="preserve">
 				<source>Activated (frequency: %1$s). The next run will take place on %2$s.</source>
 			</trans-unit>
